fastfood/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastfood-service
spec:
  type: ClusterIP
  selector:
    app: fastfood
  ports:
    - port: 80
      targetPort: 8080
